[package]
name = "leet"
version = "0.0.1"
edition = "2021"
description = """Tiny CLI utility to quickly create a Java template for solving a
particular Leetcode (https://leetcode.com/) problem."""

[dependencies]
regex = "1.7.1"
lazy_static = "1.4.0"
clap = { version = "4.1.8", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
cmd_lib = "1.3.0"
log = "0.4.17"
pretty_env_logger = "0.4.0"
